<?xml version="1.0" encoding="utf-8"?>
<!--
  App shortcut: nhấn giữ icon app → thêm việc / mở Hôm nay / tập trung, không cần vào app trước.
  MainActivity đọc extra "open" (xem AppIntents).
-->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_task"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.todoapplication"
            android:targetClass="com.example.todoapplication.MainActivity">
            <extra android:name="open" android:value="add" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="today"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_today"
        android:shortcutShortLabel="@string/shortcut_today_short"
        android:shortcutLongLabel="@string/shortcut_today_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.todoapplication"
            android:targetClass="com.example.todoapplication.MainActivity">
            <extra android:name="open" android:value="today" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="focus"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_focus"
        android:shortcutShortLabel="@string/shortcut_focus_short"
        android:shortcutLongLabel="@string/shortcut_focus_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.todoapplication"
            android:targetClass="com.example.todoapplication.MainActivity">
            <extra android:name="open" android:value="focus" />
        </intent>
    </shortcut>
</shortcuts>
